# isa-api

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .python-version  .travis.yml  LICENSE.txt  README.md  genindex.html  get_test_data.sh  index.html  nose.cfg  objects.inv  pyproject.toml  requirements-galaxy.txt  requirements-tests.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: buildLocal.yml  buildandtestpython.yml  (+1 more)
_static/: custom.css  mermaid.js  sphinx-book-theme.scss
benchmark/: bench.py  benchmark.json
content/: conversions.html  creation.html  creationtutorial.html  example-createSimpleISAJSON.html  example-createSimpleISAtab.html  example-validateISAjson.html  example-validateISAtab.html  examples.html  exportdata.html  github.html  importdata.html  index.html  installation.html  isamodel.html  knownissues.html  notebooks.html  reading.html  validation.html
docs/: annotations.rst  conf.py  conversions.rst  creation.rst  creationtutorial.rst  example-createSimpleISAJSON.rst  example-createSimpleISAtab.rst  example-validateISAjson.rst  example-validateISAtab.rst  examples.rst  exportdata.rst  github.rst  importdata.rst  index.rst  installation.rst  isamodel.rst  knownissues.rst  sampleassayplan.rst  sraconversion.rst  studydesigncreation.rst  validation.rst  writingtofile.rst
features/: environment.py  isa-assay-batch-creation.feature  isa-file-handler.feature  isa-ma-assay-batch-creation.feature  isa-material-batch-creation.feature  isa-targeted-ngs-assay-batch-creation.feature  sra-to-isatab-batch-conversion.feature
isa-cookbook/: _config.yml  _toc.yml  postBuild  requirements.txt
isatools/: .gitignore  __init__.py  __main__.py  config.py  constants.py  csv2yaml-utility.py  isajson.py  isajson2.py  isatab.py  isatab2.py  isaviz.py  logging.py  magetab.py  magetab2.py  model.py  sampletab.py  sra.py  utils.py
performances/: __main__.py  defaults.py  isajson.py  isatab.py  wrapper.py
tests/: BII-I-1.json  BII-S-3.json  README.md  TEST-ISA-charac-param-factor.json  TEST-ISA-repeated-measure.json  TEST-ISA-sample-pool-no-protocolref.json  TEST-ISA-sample-pool-with-error.json  TEST-ISA-sample-pool.json  TEST-ISA-source-split-with-error.json  TEST-ISA-source-split.json  __init__.py  create_sample_assay_plan_odicts.py  excel-pandas-tests.py  isa-test.json  magetab2json.py  nih-dcc-metadata4.json  test-isacreate-ontosource.py  test_ax.py  test_biocrates2isa.py  test_create_connectors.py  test_create_models_assay_design.py  test_create_models_json.py  test_create_models_study_design.py  test_examples.py  test_graphQL.py  test_import_sampledata.py  test_isa_datascriptor_assay_create.py  test_isa_json_reader.py  test_isa_json_v1_schemas.py  test_isa_json_writer.py  test_isa_model.py  test_isa_model_v1.py  test_isa_object_model.py  test_isa_objects.py  test_isa_tab_reader.py  test_isa_v1_converters.py  test_isa_v1_json_conversion.py  test_isa_v1_parser.py  test_isajson.py  test_isajson2tab.py  (+51 more)
(+1740 files in other folders)
